# IPC

./: CMakeLists.txt  README.md  main.cc
ipc/: CMakeLists.txt  IpcMaster.cc  IpcMaster.hh
ipc/client/: Client.cc  Client.hh
ipc/connection/: Address.hh  Connection.hh  Socket.cc  Socket.hh
ipc/logging/: Logging.cc  Logging.hh
ipc/process/: Process.cc  Process.hh
ipc/server/: Server.cc  Server.hh
logging/: CMakeLists.txt  Logging.cc  Logging.hh
my_asio/: CMakeLists.txt  MyAsio.cc  MyAsio.hh
my_asio/client/: main.cc
my_asio/server/: main.cc
